--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,6 @@ author:
 description: "Meant for my data analysis portfolio."
 
 # Build settings
-remote_theme: jekyll/minima
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
